[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roeld"
version = "0.0.1"
authors = [
  { name="n42r", email="nk.txpct@aleeas.com" },
]
description = "A set of scripts for digital music historians and collectors (Guess dates of a list of tracks, build a playlist from a tracklist, etc)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" },
classifiers = [
	"Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["music", "crate-digging", "music discovery"]

dependencies = [
	"certifi>=2023.7.22",
	"charset-normalizer>=3.3.0",
	"click>=8.1.7",
	"colorama>=0.4.6",
	"discogs-client>=2.3.0",
	"idna>=3.4",
	"joblib>=1.3.2",
	"nltk>=3.8.1",
	"oauthlib>=3.2.2",
	"PyYAML>=6.0.1",
	"regex>=2023.10.3",
	"requests>=2.31.0",
	"six>=1.16.0",
	"tqdm>=4.66.1",
	"Unidecode>=1.3.7",
	"urllib3>=2.0.7"
]


[project.urls]
"Homepage" = "https://github.com/n42r/roeld"
"Bug Tracker" = "https://github.com/n42r/roeld/issues"

[project.scripts]
roeld = "roeld.__main__:main"