[tool.poetry]
name = "guestrrday"
version = "0.1.0"
authors = [
   "n42r <n42r.me@gmail.com>",
]
description = "A tool to guess the year of release and record lable of a list of tracks"
readme = "README.md"
license = "MIT"
classifiers = [
	"Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["music", "crate-digging", "music discovery"]
homepage = "https://github.com/n42r/guestrrday"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
discogs-client = "^2.3.0"
pyyaml = "^6.0.1"
unidecode = "^1.3.7"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/n42r/guestrrday/issues"
